button animation overlaping fix

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,6 @@ header {
 		padding-top: 20px;
 		padding-right: 100px;
 		width: 100%;
-		height: 60%;
 		color: white;
 
 		.mainTitle {
@@ -41,7 +40,6 @@ header {
 	.navBar {
 		color: white;
 		width: 100%;
-		height: 30%;
 		font-size: 30px;
 		border-top: 2px solid white;
 	}
@@ -61,7 +59,6 @@ header {
 		justify-content: center;
 		align-items: center;
 		width: 33.33333333333333333%;
-		height: 100%;
 		margin: 0px;
 		transition: 0.5s;
 	}
